# viwebapi

./: .gitignore  CMakeLists.txt  CMakePresets.json  codecoverage.sh
cmake/host-lin/: gcc.cmake  gnu-aarch64-none-linux-gcc.cmake
core/: CMakeLists.txt
core/src/: viwebapi.cpp
core/src/inc/: iviwebapi.hpp  iviwebapinode.hpp  viwebapi.hpp  viwebapinode.hpp
tests/: tst_viwebapi.cpp  tst_viwebapinode.cpp
tests/main/: main.cpp
